@@ -9,21 +9,22 @@ import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.schema.Collate;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionEmbedded;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
 import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaClassInternal;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.AggregationContext;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.ResultInternal;
-import com.jetbrains.youtrack.db.internal.core.sql.executor.metadata.MetadataPath;
+import com.jetbrains.youtrack.db.internal.core.sql.executor.metadata.IndexMetadataPath;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Date;
 import java.util.Deque;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
@@ -163,8 +164,8 @@ public class SQLMathExpression extends SimpleNode {
     PLUS(20) {
       @Override
       public Number apply(Integer left, Integer right) {
-        final Integer sum = left + right;
-        if (sum < 0 && left.intValue() > 0 && right.intValue() > 0)
+        final var sum = left + right;
+        if (sum < 0 && left > 0 && right > 0)
         // SPECIAL CASE: UPGRADE TO LONG
         {
           return left.longValue() + right;
@@ -407,6 +408,7 @@ public class SQLMathExpression extends SimpleNode {
         return null;
       }
 
+      @Override
       @Nullable
       public Object apply(Object left, Object right) {
         if (left == null || right == null) {
@@ -493,6 +495,7 @@ public class SQLMathExpression extends SimpleNode {
         return null;
       }
 
+      @Override
       @Nullable
       public Object apply(Object left, Object right) {
         if (left == null && right == null) {
@@ -527,6 +530,7 @@ public class SQLMathExpression extends SimpleNode {
         return left != null ? left : right;
       }
 
+      @Override
       public Object apply(Object left, Object right) {
         return left != null ? left : right;
       }
@@ -682,17 +686,17 @@ public class SQLMathExpression extends SimpleNode {
       return null;
     }
 
-    if (childExpressions.size() == 0) {
+    if (childExpressions.isEmpty()) {
       return null;
     }
     if (childExpressions.size() == 1) {
-      return childExpressions.get(0).execute(iCurrentRecord, ctx);
+      return childExpressions.getFirst().execute(iCurrentRecord, ctx);
     }
 
     if (childExpressions.size() == 2) {
       var leftValue = childExpressions.get(0).execute(iCurrentRecord, ctx);
       var rightValue = childExpressions.get(1).execute(iCurrentRecord, ctx);
-      return operators.get(0).apply(leftValue, rightValue);
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(iCurrentRecord, ctx);
@@ -703,27 +707,27 @@ public class SQLMathExpression extends SimpleNode {
     if (childExpressions == null || operators == null) {
       return null;
     }
-    if (childExpressions.size() == 0) {
+    if (childExpressions.isEmpty()) {
       return null;
     }
     if (childExpressions.size() == 1) {
-      return childExpressions.get(0).execute(iCurrentRecord, ctx);
+      return childExpressions.getFirst().execute(iCurrentRecord, ctx);
     }
 
     if (childExpressions.size() == 2) {
       var leftValue = childExpressions.get(0).execute(iCurrentRecord, ctx);
       var rightValue = childExpressions.get(1).execute(iCurrentRecord, ctx);
-      return operators.get(0).apply(leftValue, rightValue);
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(iCurrentRecord, ctx);
   }
 
   private Object calculateWithOpPriority(Result iCurrentRecord, CommandContext ctx) {
-    Deque valuesStack = new ArrayDeque<>();
+    Deque<Object> valuesStack = new ArrayDeque<>();
     Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
     if (childExpressions != null && operators != null) {
-      var nextExpression = childExpressions.get(0);
+      var nextExpression = childExpressions.getFirst();
       var val = nextExpression.execute(iCurrentRecord, ctx);
       valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -753,7 +757,7 @@ public class SQLMathExpression extends SimpleNode {
     Deque valuesStack = new ArrayDeque<>();
     Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
     if (childExpressions != null && operators != null) {
-      var nextExpression = childExpressions.get(0);
+      var nextExpression = childExpressions.getFirst();
       var val = nextExpression.execute(iCurrentRecord, ctx);
       valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -781,7 +785,7 @@ public class SQLMathExpression extends SimpleNode {
   @Nullable
   private Object iterateOnPriorities(Deque values, Deque<Operator> operators) {
     while (true) {
-      if (values.size() == 0) {
+      if (values.isEmpty()) {
         return null;
       }
       if (values.size() == 1) {
@@ -840,7 +844,7 @@ public class SQLMathExpression extends SimpleNode {
 
   public SQLMathExpression unwrapIfNeeded() {
     if (this.childExpressions != null && this.childExpressions.size() == 1) {
-      return this.childExpressions.get(0);
+      return this.childExpressions.getFirst();
     }
     return this;
   }
@@ -856,6 +860,7 @@ public class SQLMathExpression extends SimpleNode {
     this.operators.add(operator);
   }
 
+  @Override
   public void toString(Map<Object, Object> params, StringBuilder builder) {
     if (childExpressions == null || operators == null) {
       return;
@@ -904,6 +909,7 @@ public class SQLMathExpression extends SimpleNode {
     }
   }
 
+  @Override
   public void toGenericStatement(StringBuilder builder) {
     if (childExpressions == null || operators == null) {
       return;
@@ -966,7 +972,7 @@ public class SQLMathExpression extends SimpleNode {
   public boolean isIndexedFunctionCall(DatabaseSessionInternal session) {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
-        return this.childExpressions.get(0).isIndexedFunctionCall(session);
+        return this.childExpressions.getFirst().isIndexedFunctionCall(session);
       }
     }
     return false;
@@ -978,7 +984,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
         return this.childExpressions
-            .get(0)
+            .getFirst()
             .estimateIndexedFunction(target, context, operator, right);
       }
     }
@@ -992,7 +998,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
         return this.childExpressions
-            .get(0)
+            .getFirst()
             .executeIndexedFunction(target, context, operator, right);
       }
     }
@@ -1014,7 +1020,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
         return this.childExpressions
-            .get(0)
+            .getFirst()
             .canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
       }
     }
@@ -1036,7 +1042,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
         return this.childExpressions
-            .get(0)
+            .getFirst()
             .allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
       }
     }
@@ -1061,7 +1067,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
         return this.childExpressions
-            .get(0)
+            .getFirst()
             .executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
       }
     }
@@ -1071,7 +1077,7 @@ public class SQLMathExpression extends SimpleNode {
   public boolean isFunctionAny() {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
-        return this.childExpressions.get(0).isFunctionAny();
+        return this.childExpressions.getFirst().isFunctionAny();
       }
     }
     return false;
@@ -1080,7 +1086,7 @@ public class SQLMathExpression extends SimpleNode {
   public boolean isFunctionAll() {
     if (this.childExpressions != null) {
       if (this.childExpressions.size() == 1) {
-        return this.childExpressions.get(0).isFunctionAll();
+        return this.childExpressions.getFirst().isFunctionAll();
       }
     }
     return false;
@@ -1089,26 +1095,50 @@ public class SQLMathExpression extends SimpleNode {
   public boolean isBaseIdentifier() {
     if (this.childExpressions != null) {
       if (childExpressions.size() == 1) {
-        return childExpressions.get(0).isBaseIdentifier();
+        return childExpressions.getFirst().isBaseIdentifier();
       }
     }
+
     return false;
   }
 
-  public Optional<MetadataPath> getPath() {
+  public boolean isGraphRelationFunction(DatabaseSessionEmbedded session) {
     if (this.childExpressions != null) {
       if (childExpressions.size() == 1) {
-        return childExpressions.get(0).getPath();
+        return childExpressions.getFirst().isGraphRelationFunction(session);
       }
     }
-    return Optional.empty();
+
+    return false;
+  }
+
+
+  @Nullable
+  public Collection<String> getGraphRelationFunctionProperties(CommandContext ctx) {
+    if (this.childExpressions != null) {
+      if (childExpressions.size() == 1) {
+        return childExpressions.getFirst().getGraphRelationFunctionProperties(ctx);
+      }
+    }
+
+    return null;
+  }
+
+  @Nullable
+  public IndexMetadataPath getIndexMetadataPath(DatabaseSessionEmbedded session) {
+    if (this.childExpressions != null) {
+      if (childExpressions.size() == 1) {
+        return childExpressions.getFirst().getIndexMetadataPath(session);
+      }
+    }
+    return null;
   }
 
   @Nullable
   public Collate getCollate(Result currentRecord, CommandContext ctx) {
     if (this.childExpressions != null) {
       if (childExpressions.size() == 1) {
-        return childExpressions.get(0).getCollate(currentRecord, ctx);
+        return childExpressions.getFirst().getCollate(currentRecord, ctx);
       }
     }
     return null;
@@ -1170,7 +1200,7 @@ public class SQLMathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.get(0).isCount();
+    return this.childExpressions.getFirst().isCount();
   }
 
   public SimpleNode splitForAggregation(
@@ -1211,6 +1241,7 @@ public class SQLMathExpression extends SimpleNode {
         "multiple math expressions do not allow plain aggregation");
   }
 
+  @Override
   public SQLMathExpression copy() {
     SQLMathExpression result = null;
     try {
@@ -1290,7 +1321,7 @@ public class SQLMathExpression extends SimpleNode {
         }
       }
     }
-    if (result.size() == 0) {
+    if (result.isEmpty()) {
       return null;
     }
     return result;
@@ -1300,7 +1331,7 @@ public class SQLMathExpression extends SimpleNode {
     if (childExpressions == null || childExpressions.size() != 1) {
       throw new CommandExecutionException(ctx.getDatabaseSession(), "cannot apply REMOVE " + this);
     }
-    childExpressions.get(0).applyRemove(result, ctx);
+    childExpressions.getFirst().applyRemove(result, ctx);
   }
 
   public static SQLMathExpression deserializeFromResult(Result fromResult) {
